<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFEDF2F7"
    android:contentDescription="@string/blanco"
    tools:context=".DetallesRegistro">

    <TextView
        android:id="@+id/lblTituloDetalleRegistro"
        android:layout_width="235dp"
        android:layout_height="134dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="168dp"
        android:gravity="center"
        android:text="@string/titulodetallesregistro"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="20dp"
        android:text="@string/TFecha"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTituloDetalleRegistro" />

    <TextView
        android:id="@+id/lblFechaUltimaModificacion"
        android:layout_width="102dp"
        android:layout_height="19dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="#1B2C53C7"
        android:text="@string/Fecha"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTituloDetalleRegistro" />

    <TextView
        android:id="@+id/lblHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="13dp"
        android:text="@string/THora"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblFecha" />

    <TextView
        android:id="@+id/lblHoraUltimaModificacion"
        android:layout_width="101dp"
        android:layout_height="21dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="50dp"
        android:background="#1B2C53C7"
        android:text="@string/Hora"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblFechaUltimaModificacion" />

    <TextView
        android:id="@+id/lblContentidoRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="19dp"
        android:text="@string/contenido"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHoraUltimaModificacion" />

    <TextView
        android:id="@+id/lblDatosRegistrados"
        android:layout_width="254dp"
        android:layout_height="167dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="17dp"
        android:background="#1B2C53C7"
        android:text="@string/TextoContenido"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblContentidoRegistro" />

    <Button
        android:id="@+id/btVolver"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="30dp"
        android:background="#2038D6"
        android:onClick="aLista"
        android:text="@string/btnALista"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDatosRegistrados" />

    <ImageView
        android:id="@+id/btHome"
        android:layout_width="64dp"
        android:layout_height="68sp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/blanco"
        android:onClick="btHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/salir" />
</androidx.constraintlayout.widget.ConstraintLayout>